# AIgame

./: .gitignore  README.md  main.py
android_app/: RELEASE_BUILD.md  build_release.ps1  gradle.properties  gradlew  gradlew.bat  keystore.properties.example  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  local_llama_jni.cpp
android_app/app/src/main/java/com/jinhui/immortaldemo/: MainActivity.kt
android_app/app/src/main/java/com/jinhui/immortaldemo/core/: GameCore.kt  LocalLlamaJni.kt  LocalLlamaProvider.kt  Models.kt  NpcInferenceProvider.kt
android_app/app/src/main/java/com/jinhui/immortaldemo/ui/: MiniMapView.kt
android_app/app/src/main/res/layout/: activity_main.xml
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/app/src/main/res/values-night/: themes.xml
config/: asset_budget.csv  combat_mobile_constraints.md  combat_spec.md  config_schema.md  dialogue.json  drop_table.json  dungeons.json  equipment_catalog.json  factions.json  lore_one_pager.md  main_story_flow.json  mount_catalog.json  quality_levels.md  quest_rules.md  save_format.json  save_migration.md  skill_config.json  story.json  treasure_catalog.json  ui_layout_rules.md
data/: drops.csv  enemies.csv  player_growth.csv  skills.csv  stages.csv
data/mazes/: ch1_mine_maze.json  ch2_bronze_maze.json
data/sanguo/: shu.json  wei.json  wu.json  zhe.json  zhetian.json
docs/: ui_wireframe.md
